fix(myapps): #44683, change flex value for good apply on iOS

--- a/scss/_applications.scss
+++ b/scss/_applications.scss
@@ -26,7 +26,7 @@
             height: 80px;
             font-size: 3.5rem;
             color: $text-color;
-            flex: 0;
+            flex: 1;
         }
         span {
             padding-top: 5px;
